--- a/sequence/blast/README
+++ b/sequence/blast/README
@@ -8,3 +8,20 @@ evolutionary relationships between sequences as well as help identify
 members of gene families.
 
 For more information, visit http://blast.ncbi.nlm.nih.gov
+
+BLASTn tabular output format 6
+Column headers:
+qseqid sseqid pident length mismatch gapopen qstart qend sstart send evalue bitscore
+
+ 1.	qseqid	 query (e.g., gene) sequence id
+ 2.	sseqid	 subject (e.g., reference genome) sequence id
+ 3.	pident	 percentage of identical matches
+ 4.	length	 alignment length
+ 5.	mismatch number of mismatches
+ 6.	gapopen	 number of gap openings
+ 7.	qstart	 start of alignment in query
+ 8.	qend	 end of alignment in query
+ 9.	sstart	 start of alignment in subject
+10.	send	 end of alignment in subject
+11.	evalue	 expect value
+12.	bitscore bit score
